# ar4

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
ar4_common/: README.md  package.xml
ar4_control/: CMakeLists.txt  package.xml
ar4_control/config/: ar4_controllers.yaml
ar4_description/: CMakeLists.txt  LICENSE  ar4.blend  ar4.blend1  ar4_plain.blend  ar4_plain.blend1  package.xml
ar4_description/ar4_import/: ar4.usd  link_1_motor.usd
ar4_description/config/: ar4_vis.rviz  link_properties.yaml
ar4_description/launch/: ar4.launch.py
ar4_description/new_meshes/: base_link.dae  base_link_bottom.dae  base_link_motor.dae
ar4_description/urdf/: ar4.ros2_control.xacro  ar4.urdf  ar4.urdf.xacro  ar4_in_world.urdf.xacro
ar4_description/urdf/ar4/: ar4.usd
ar4_description/urdf/include/: ar_gripper_macro.xacro  common_macros.urdf.xacro
ar4_gazebo/: CMakeLists.txt  README.md  package.xml
ar4_gazebo/config/: bridge.yaml
ar4_gazebo/launch/: ar4.launch.py  ar4_in_empty_world.launch.py  gazebo_moveit.launch.py  gz_ros_bridge.launch.py  joint_state_broadcaster.launch.py  moveit.launch.py  spawn_ar4.launch.py  spawn_ar4_sim.launch.py
ar4_gazebo/urdf/: ar4.ros2_control.xacro  ar4_gazebo.urdf.xacro  ar_gripper.ros2_control.xacro
ar4_gazebo_bringup/: README.md
ar4_gazebo_bringup/launch/: main.launch.py
ar4_gazebo_sim/: README.md
ar4_gazebo_sim/launch/: main.launch.py
ar4_gazebo_sim/urdf/: gz_ar4.urdf.xacro
ar4_gazebo_sim/urdf/includes/: gazebo.xacro  ros2_control.xacro
ar4_hardware_interface/: README.md  package.xml
ar4_hardware_interface/include/ar4_hardware_interface/: ar4_hardware_interface.hpp  ar4_servo_gripper_hw_interface.hpp  arduino_nano_driver.hpp  teensy_driver.hpp
ar4_hardware_interface/launch/: ar4_hardware.launch.py
ar4_hardware_interface/src/: ar4_hardware_interface.cpp  ar4_servo_gripper_hw_interface.cpp  arduino_nano_driver.cpp  run_arduino_nano.cpp  teensy_driver.cpp
ar4_isaac/: CMakeLists.txt  README.md  launch.sh  package.xml  run_sim.py
ar4_isaac/docs/: UPDATE_MODEL.md
ar4_isaac/launch/: ar4_controllers.launch.py  ar4_in_empty_world.launch.py  moveit.launch.py
ar4_isaac/scripts/: run_sim.py
ar4_isaac/stages/: empty_stage.usd  empty_stage.usda
ar4_isaac/urdf/: ar4.ros2_control.xacro  ar4_isaac.urdf.xacro
ar4_isaac/usda/: ar4.usda  instanceable_meshes.usd
ar4_isaac/usda/layers/: ar4_layer.usda  omnigraph_layer.usda
ar4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ar4_moveit_config/config/: ar4.ros2_control.xacro  ar4.srdf  ar4.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ar4_moveit_config/launch/: ar4_moveit.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ar4_mujoco_bringup/: package.xml
ar4_mujoco_bringup/launch/: main.launch.py
ar4_mujoco_sim/: README.md  package.xml
ar4_mujoco_sim/launch/: main.launch.py
ar4_mujoco_sim/meta/: metadata.json
ar4_mujoco_sim/mjcf/: scene.xml
ar4_mujoco_sim/mjcf/robot/: mj_ar4.mjcf
ar4_mujoco_sim/scripts/docker/: entrypoint.sh
ar4_mujoco_sim/urdf/: mj_ar4.urdf
ar4_mujoco_sim/xacro/includes/: mujoco.xacro  ros2_control.xacro
ar4_realbot_bringup/: README.md
ar4_realbot_bringup/launch/: main.launch.py
docker/: Dockerfile  Dockerfile.isaac  build.sh  docker-compose.yml  install.sh  join.sh  requirements_ros.txt  run.sh
tools/: README.md  check_copyright.py
