<?xml version="1.0"?>
<package format="3">
  <name>ar4_control</name>
  <version>1.0.0</version>
  <description>AR4 ROS 2 control package</description>

  <author email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</author>
  <maintainer email="steven.desvars@creativa77.com.ar">Steven Desvars</maintainer>
  <maintainer email="santiago.mendez@creativa77.com.ar">Santiago Lopez mendez</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
