<?xml version="1.0"?>
<package format="3">
  <name>ar4_description</name>
  <version>1.0.0</version>
  <description>AR4 robot description</description>
  <author email="wagnermarcos@ekumenlabs.com">Marcos Wagner</author>
  <maintainer email="wagnermarcos@ekumenlabs.com">Marcos Wagner</maintainer>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
